tests/snapshots/relationships/fmSyntaxColorizer/[Home_Syntax_ALL] - [Home_Syntax_ALL_GUISyntax] - ID 45.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="45">
	<UUID modifications="3" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">DF13DAAA-2405-4377-B489-A8009DAF3DC2</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065133" name="Home.Syntax_ALL"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065147" name="Home.Syntax_ALL.GUISyntax"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="2">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="2" name="Command_EN">
					<TableOccurrenceReference id="1065133" name="Home.Syntax_ALL"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="7" name="Command_EN">
					<TableOccurrenceReference id="1065147" name="Home.Syntax_ALL.GUISyntax"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="5" name="_gLanguage">
					<TableOccurrenceReference id="1065133" name="Home.Syntax_ALL"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="3" name="Language">
					<TableOccurrenceReference id="1065147" name="Home.Syntax_ALL.GUISyntax"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
