tests/snapshots/relationships/fmSyntaxColorizer/[Home_Syntax_Dynamic2] - [Home_Syntax_Dynamic2_Palette_Color_VL] - ID 55.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="55">
	<UUID modifications="3" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">9AE1480C-5F91-4A38-A089-9C9A0EF5D3F5</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065156" name="Home.Syntax_Dynamic2"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065160" name="Home.Syntax_Dynamic2.Palette.Color_VL"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="2">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="19" name="_kID_PaletteMLK0">
					<TableOccurrenceReference id="1065156" name="Home.Syntax_Dynamic2"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="11" name="_ID_Palette">
					<TableOccurrenceReference id="1065160" name="Home.Syntax_Dynamic2.Palette.Color_VL"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="22" name="_kPaletteType">
					<TableOccurrenceReference id="1065156" name="Home.Syntax_Dynamic2"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="14" name="PaletteType">
					<TableOccurrenceReference id="1065160" name="Home.Syntax_Dynamic2.Palette.Color_VL"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
