tests/snapshots/relationships/fmSyntaxColorizer/[Home_Syntax_Dynamic3] - [Home_Syntax_Dynamic3_Palette_Color_VL] - ID 56.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="56">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">DA82CB93-5734-4EA7-A9A9-DB8FECC04450</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065157" name="Home.Syntax_Dynamic3"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065161" name="Home.Syntax_Dynamic3.Palette.Color_VL"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="2">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="19" name="_kID_PaletteMLK0">
					<TableOccurrenceReference id="1065157" name="Home.Syntax_Dynamic3"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="11" name="_ID_Palette">
					<TableOccurrenceReference id="1065161" name="Home.Syntax_Dynamic3.Palette.Color_VL"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="22" name="_kPaletteType">
					<TableOccurrenceReference id="1065157" name="Home.Syntax_Dynamic3"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="14" name="PaletteType">
					<TableOccurrenceReference id="1065161" name="Home.Syntax_Dynamic3.Palette.Color_VL"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
