tests/snapshots/relationships/fmSyntaxColorizer/[Palette_Color] - [_Palette] - ID 19.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="19">
	<UUID modifications="6" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">9E6DBB00-FB9E-439A-A348-5857B9A47D72</UUID>
	<LeftTable cascadeCreate="True" cascadeDelete="True" type="Local">
		<TableOccurrenceReference id="1065118" name="Palette.Color"></TableOccurrenceReference>
		<SortSpecification value="True" maintain="True">
			<SortList membercount="2">
				<Sort type="Custom">
					<PrimaryField>
						<FieldReference id="14" name="PaletteType">
							<TableOccurrenceReference id="1065118" name="Palette.Color"></TableOccurrenceReference>
						</FieldReference>
					</PrimaryField>
					<ValueListReference id="8" name="Selector"></ValueListReference>
				</Sort>
				<Sort type="Ascending">
					<PrimaryField>
						<FieldReference id="2" name="ColorName">
							<TableOccurrenceReference id="1065118" name="Palette.Color"></TableOccurrenceReference>
						</FieldReference>
					</PrimaryField>
				</Sort>
			</SortList>
		</SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065115" name="_Palette"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="1">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="11" name="_ID_Palette">
					<TableOccurrenceReference id="1065118" name="Palette.Color"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="1" name="__ID">
					<TableOccurrenceReference id="1065115" name="_Palette"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
