tests/snapshots/relationships/fmSyntaxColorizer/[_Color] - [Color_Palette_all] - ID 36.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="36">
	<UUID modifications="3" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">70CB62E6-4BBA-4936-91C9-84BA9E619927</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065112" name="_Color"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065138" name="Color.Palette_all"></TableOccurrenceReference>
		<SortSpecification value="True" maintain="True">
			<SortList membercount="1">
				<Sort type="Ascending">
					<PrimaryField>
						<FieldReference id="2" name="PaletteName">
							<TableOccurrenceReference id="1065138" name="Color.Palette_all"></TableOccurrenceReference>
						</FieldReference>
					</PrimaryField>
				</Sort>
			</SortList>
		</SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="1">
		<JoinPredicate type="CartesianProduct">
			<LeftField>
				<FieldReference id="17" name="_k1">
					<TableOccurrenceReference id="1065112" name="_Color"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="11" name="_k1">
					<TableOccurrenceReference id="1065138" name="Color.Palette_all"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
