tests/snapshots/relationships/fmSyntaxColorizer/[_Color] - [Color_Palette_byID] - ID 27.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="27">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">2D5BDF05-93AF-4563-92DC-CED01A404698</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065112" name="_Color"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="True" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065128" name="Color.Palette_byID"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="1">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="11" name="_ID_Palette">
					<TableOccurrenceReference id="1065112" name="_Color"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="1" name="__ID">
					<TableOccurrenceReference id="1065128" name="Color.Palette_byID"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
