tests/snapshots/relationships/fmSyntaxColorizer/[_Color] - [Color_Syntax] - ID 31.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="31">
	<UUID modifications="6" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">52FEACEB-1DEE-498E-9667-408177140197</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065112" name="_Color"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065134" name="Color.Syntax"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="2">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="2" name="ColorName">
					<TableOccurrenceReference id="1065112" name="_Color"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="3" name="ColorName">
					<TableOccurrenceReference id="1065134" name="Color.Syntax"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="14" name="PaletteType">
					<TableOccurrenceReference id="1065112" name="_Color"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="22" name="_kPaletteType">
					<TableOccurrenceReference id="1065134" name="Color.Syntax"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
