tests/snapshots/relationships/fmSyntaxColorizer/[_Home] - [Home_Syntax_Dynamic1] - ID 50.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="50">
	<UUID modifications="4" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">6DB2BA1E-360F-4A3C-93B0-A0126A5F3591</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="True" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065155" name="Home.Syntax_Dynamic1"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="1">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="40" name="_gDynamic1Comment">
					<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="18" name="Comment">
					<TableOccurrenceReference id="1065155" name="Home.Syntax_Dynamic1"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
