tests/snapshots/relationships/fmSyntaxColorizer/[_Home] - [Home_Syntax_Dynamic2] - ID 51.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="51">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">C5D48A2B-D6BD-4DCA-9AE2-F87EB7D88A99</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="True" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065156" name="Home.Syntax_Dynamic2"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="1">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="41" name="_gDynamic2Comment">
					<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="18" name="Comment">
					<TableOccurrenceReference id="1065156" name="Home.Syntax_Dynamic2"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
